# prices-timeline

./: .env.example  .gitignore  README.md  TYPE_SAFETY.md  check_types.sh  main.py  mypy.ini  requirements.txt  types.py
.github/workflows/: deploy-pages.yaml
config/: urls.txt
crawlers/: __init__.py  kupi_crawler.py
extractors/: kupi_schema.py
scripts/: crawl-and-build.sh
src_crawler/: TYPE_SAFETY.md  main.py  mypy.ini  pyproject.toml  setup.sh
src_crawler/config/: urls.txt
src_crawler/crawlers/: kupi_crawler.py
src_crawler/extractors/: __init__.py  kupi_schema.py
src_crawler/utils/: storage.py  text_parser.py
src_web/: index.html  package-lock.json  package.json  vite.config.ts
src_web/src/: App.tsx  ProductTimetable.tsx  combined_data.json  main.tsx  types.ts
src_web/src/components/: ThemeToggle.tsx
src_web/src/hooks/: ThemeContext.tsx  ThemeProvider.tsx  useProductBackground.ts  useTheme.ts
utils/: date_parser.py  storage.py
